Update to Linking

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="icon" href="img/LogoS.png">
-<title>KKGK</title>
+<title>KKGK Arknight Collab</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css"> 
 <link rel="stylesheet" href="font.css"> 
@@ -9,7 +9,7 @@
 <body>
 <div class="topnav">
     <a class=logo><img width=45px src="img/Faction-rhodesisland.png"></a>
-    <a class="title"><b>KKGK NO ARKNIGHT</b></a>
+    <a class="title"><b>KKGK</b></a>
     <a href="https://kakugeki.github.io">Home</a>
     <a class="active" href="#">Arknight</a>
 </div>
