--- a/test.html
+++ b/test.html
@@ -1,42 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color: gray">
-
-
-<script id=sc1 src="js/_template.js"></script>   
-
-<h2>My First Web Page</h2>
-<p>My First Paragraph.</p>
-
-  
-<div id="operatorName"></div>
-<p id="operatorArtist"></p>
-<p id="operatorClass"></p>
-
-<img id="myImage" src="img/class_caster.png">
-
-<button onclick="classMedic()"> MIAO </button>
-
-
-
+<head>
+<script src="jquery-3.4.1.min.js"></script>
 <script>
-
-var img = document.createElement("classMedic");    
-classMedic.src="img/class_medic.png";
-var div = document.getElementById('x');
-    
-classMedic.onload = function() {
- 
-  div.innerHTML += '<img src="'+img.src+'" />'; 
- 
-};    
-    
-function classMedic() {
-    document.getElementById(myImage).src="img/class_medic.png";
-}
+$(document).ready(function(){
+  $("button").click(function(){
+    $("#div2").load("demo_test.txt #p1");
+  });
+});
 </script>
+</head>
+<body>
 
+<div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div>
+<div id="div2"><h2>Let jQuery AJAX Change This Text</h2></div>
 
+<button>Get External Content</button>
 
 </body>
-</html> 
+</html>
