--- a/test-addingLayerstoScript.html
+++ b/test-addingLayerstoScript.html
@@ -27,6 +27,10 @@ $(document).ready(function(){
     
     <button id="op1">Get Script</button>
     <button id="op2">CHANGE IT</button>
+    
+    <button onclick="window.location.reload(false);">
+        reload
+        </button>
 
 </body>
 </html>
