--- a/test.html
+++ b/test.html
@@ -4,13 +4,16 @@
 <script src="jquery-3.4.1.min.js"></script>
 <script>
 $(document).ready(function(){
-  $("button").click(function(){
-    $("#div2").load("demo_test.txt #p1");
-  });
+    $("#ClickMe").click(function(){
+        $("#div2").load("demo_test.txt #p1");
+        $("#div1").load("demo_test.txt #p3");  
+    });
 });
 </script>
 </head>
 <body>
+
+<div id="ClickMe">Miao,Boom</div>
 
 <div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div>
 <div id="div2"><h2>Let jQuery AJAX Change This Text</h2></div>
