Test Script sync mode

--- a/test.html
+++ b/test.html
@@ -13,6 +13,38 @@ $(document).ready(function(){
 </head>
 <body>
 
+<table style="width: 100%">
+    <tr>
+        <th> [Code Name] </th>
+        <th> Text </th>
+    </tr>
+    <tr>
+        <th> [Gender] </th>
+        <th> Text </th>
+    </tr>
+    <tr>
+        <th> [Combat Experience] </th>
+        <th> Text </th>
+    </tr>
+    <tr>
+        <th> [Place of Birth </th>
+        <th> Text </th>
+    </tr>
+    <tr>
+        <th> [Date of Birth] </th>
+        <th> Text </th>
+    </tr>
+    <tr>
+        <th> [Race] </th>
+        <th> Text </th>
+    </tr>
+    <tr>
+        <th> [Height] </th>
+        <th> Text </th>
+    </tr>
+</table>
+
+
 <div id="ClickMe">Miao,Boom</div>
 
 <div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div>
